# sodium-native

./: .clang-format  .gitignore  .gitmodules  .prettierignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  appveyor.yml  binding.c  binding.cc  binding.gyp  configure  example.js  helpers.h  index.js  macros.h  makefile.js  package.json  postinstall.js  preinstall.js  test.js  typedcalls.cc  typedcalls.h
.github/workflows/: make-release.yml  make-release2.yml  manual.yml  prebuild.yml  test-node.yaml  test.yml
cmake/ports/libsodium/: port.cmake
cmake/ports/libsodium/patches/: 01-windows-sys-param.patch
examples/: ristretto255.js  sodium.js
extensions/pbkdf2/: pbkdf2.c  pbkdf2.h
extensions/tweak/: tweak.c  tweak.h
modules/crypto_tweak/: tweak.c  tweak.h
modules/pbkdf2/: pbkdf2.c  pbkdf2.h
scripts/: configure-version.js  endianness.js  version.js
src/: constants.h  crypto_generichash_wrap.cc  crypto_generichash_wrap.h  crypto_hash_sha256_wrap.cc  crypto_hash_sha256_wrap.h  crypto_hash_sha512_wrap.cc  crypto_hash_sha512_wrap.h  crypto_onetimeauth_wrap.cc  crypto_onetimeauth_wrap.h  crypto_pwhash_async.cc  crypto_pwhash_scryptsalsa208sha256_async.cc  crypto_pwhash_scryptsalsa208sha256_str_async.cc  crypto_pwhash_scryptsalsa208sha256_str_verify_async.cc  crypto_pwhash_str_async.cc  crypto_pwhash_str_verify_async.cc  crypto_secretstream_xchacha20poly1305_state_wrap.cc  crypto_secretstream_xchacha20poly1305_state_wrap.h  crypto_sha256_wrap.cc  crypto_stream_chacha20_xor.c  crypto_stream_chacha20_xor.h  crypto_stream_chacha20_xor_wrap.cc  crypto_stream_chacha20_xor_wrap.h  crypto_stream_xor.c  crypto_stream_xor.h  crypto_stream_xor_wrap.cc  crypto_stream_xor_wrap.h  crypto_stream_xsalsa20_xor.c  crypto_stream_xsalsa20_xor.h  macros.h
test/: all.js  core_ed25519.js  core_ristretto255.js  crypto_aead_chacha20poly1305_ietf.js  crypto_aead_xchacha20poly1305_ietf.js  crypto_auth.js  crypto_box.js  crypto_generichash.js  crypto_hash.js  crypto_hash_sha256.js  crypto_hash_sha512.js  crypto_kdf.js  crypto_kx.js  crypto_onetimeauth.js  crypto_pwhash.js  crypto_pwhash_scryptsalsa208sha256.js  crypto_scalarmult.js  crypto_secretbox.js  crypto_secretstream.js  crypto_shorthash.js  crypto_sign.js  crypto_stream.js  crypto_stream_chacha20.js  crypto_stream_chacha20_ietf.js  crypto_tweak_ed25519.js  crypto_tweak_ed25519_sign.js  extension_pbkdf2.js  extension_tweak_ed25519.js  fastcalls.js  helpers.js  memory.js  padding.js  randombytes.js  randombytes_buf.js  sodium-test.js  vectors.js
test/fixtures/: crypto_kdf.json  crypto_tweak_ed25519_sign.js  crypto_tweak_ed25519_sign.json  mprotect_noaccess.js  mprotect_readonly.js  mprotect_readwrite.js  pbkdf2.json
